testing/src/java7srclisting/errors/ErrorV4.java
package java7srclisting.errors;

class Class {

}
